@@ -1,5 +1,6 @@
 DIST kadu-0.6.0.3.tar.bz2 1609595 RMD160 7a8e27a352dc6d40ff8305e130eacafec7ee4831 SHA1 9e56402d272e09bda32f46f1b963acb1d76c9eb6 SHA256 36e7d276403c47ee5da120d92a7d1cb8c5676ad079b4e7d3f168b9e7d083b167
-DIST kadu-0.6.5.tar.bz2 1312474 RMD160 26a80cb7b0c7dbc8c2c38ae9b8aa6609eb0fd8ad SHA1 9cacbec423c192f6482d9d67a163350191f5bfe2 SHA256 09f17f4b23a3ea8590135ff4a050b52565f3a364bfe4d986079c5be0bba83fdb
-EBUILD kadu-sound-0.6.0.3.ebuild 286 RMD160 1328a551d3b1d5feac314e3facb0017b27aa3a39 SHA1 cb1d2e2d85390d06d367be57d99f6770cb8d55ff SHA256 1bdaa38f31c3d9b1acd04e90214a462460f1a493c3c17644f68fc0a15ad449d3
-EBUILD kadu-sound-0.6.5.ebuild 238 RMD160 48d8466f69f317223ad55fa81b8d7a88a9ccc11c SHA1 95abfa24f1cb51b9cb769e313279696dcf272da5 SHA256 00f4abb49d887216d5a20fc03619a95a3b29cdf6f531d24db7620113e1d51228
-MISC ChangeLog 862 RMD160 04b862d9415990c5ba7c036a48fb2a38355db088 SHA1 4216853ae817227261b56187bc99f2182029b954 SHA256 0861b9bfc71f99c55f71a22c5607227aefdc25b61fd8c476289c128dff4fd1ec
+DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e45 SHA1 1257b37c30d9682d4fd350b78d983de04b970872 SHA256 e2df2e1d7c1fa9a5d931a35efeb936088c42ef4b5d42fef8dddadc40f87397e2
+EBUILD kadu-sound-0.6.0.3.ebuild 416 RMD160 53b88bb98110d3712e8727c7a1c3a5af20b52fa5 SHA1 57436422c6c1063e18bd995ff09f81e98f5f0316 SHA256 ae37b90d08f80b47ca2b46366e550a79c6c1cb0ee29fa1c9a260cca47d887943
+EBUILD kadu-sound-0.6.5.1.ebuild 333 RMD160 8030ac3aba4522bd9ce8bb208aaf5eab693e42da SHA1 040f760f443def205d2447e3dbf090f486b9ea00 SHA256 f970d41a1ec0476905b54810cc21bdea6ca90eee72290c9889a9e0817ada22ee
+MISC ChangeLog 1066 RMD160 bd9bf262c3b277917c31af3c9735c6a8ea479450 SHA1 61c747241f64a56d76615d6193863132908d262d SHA256 ba5bffe0876d91ea193b2586332456aa8395b8109dfc48b40405837f8a7ce2c5
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
